syntax = "proto3";

package ConfigProto;

message SetFlyRequest {
  int32 cId = 1;
  bool setStatus = 2;
}

message SetFlyResponse {
	int32 code = 1;
	SetFlyRequest request = 2;
}